crates/rstest-bdd-macros/tests/ui/placeholder_missing_params.stderr
error: invalid step function signature: missing step arguments for placeholders: a, b, c
 --> tests/ui/placeholder_missing_params.rs:4:4
  |
4 | fn missing_multi() {}
  |    ^^^^^^^^^^^^^
  |
  = help: Use `#[given] fn name(...args...)` with supported step arguments/fixtures; remove self.

error: invalid step function signature: missing step arguments for placeholders: v
 --> tests/ui/placeholder_missing_params.rs:7:4
  |
7 | fn type_mismatch(_v: String) {}
  |    ^^^^^^^^^^^^^
  |
  = help: Use `#[given] fn name(...args...)` with supported step arguments/fixtures; remove self.

error: invalid step function signature: missing step arguments for placeholders: x, y
  --> tests/ui/placeholder_missing_params.rs:10:4
   |
10 | fn extra_param(_x: u32, _y: u32, _z: u32) {}
   |    ^^^^^^^^^^^
   |
   = help: Use `#[given] fn name(...args...)` with supported step arguments/fixtures; remove self.
